<resources>
    <string name="app_name" translatable="false">Kapture</string>
    <string name="kapture" translatable="false">Kapture</string>
    <string name="kapture_plural" translatable="false">Kaptures</string>
    <string name="folder_name" translatable="false">Kapture</string>
    <string name="folder_screenshot_name" translatable="false">Screenshots</string>
    <string name="quick_settings_tile_start_recording">Start screen capture</string>
    <string name="quick_settings_tile_stop_recording">Stop screen capture</string>
    <string name="quick_settings_tile_processing">Processing capture</string>
    <string name="quick_settings_tile_wifi_share">WiFi share (Kapture)</string>
    <string name="shortcut_start_recording">Start screen capture</string>
    <string name="shortcut_stop_recording">Stop screen capture</string>
    <string name="shortcut_pause_recording">Pause screen capture</string>
    <string name="shortcut_resume_recording">Resume screen capture</string>
    <string name="notification_channel_name_capturing">Capturing</string>
    <string name="notification_recording_recording">Capturing</string>
    <string name="notification_recording_action">Tap here to stop or expand for more actions</string>
    <string name="notification_recording_paused">Paused</string>
    <string name="notification_recording_stop">Stop</string>
    <string name="notification_recording_pause">Pause</string>
    <string name="notification_recording_resume">Resume</string>
    <string name="notification_saved">Capture saved</string>
    <string name="notification_tap_show">Tap here to see your capturing.</string>
    <string name="notification_processing">Processing capture</string>
    <string name="notification_processing_message">Wait while the capture is processed!</string>
    <string name="notification_receiving">Receiving</string>
    <string name="notification_receiving_message">Downloading the data from the watch…</string>
    <string name="notification_receiving_error">Error receiving</string>
    <string name="notification_receiving_error_message">Something went wrong. Try again!</string>
    <string name="notification_receiving_success">Received!</string>
    <string name="notification_receiving_success_message_singular">1 file added.</string>
    <string name="notification_receiving_success_message_plural">%d files added.</string>
    <string name="notification_wifi_share">Wifi share is running!</string>
    <string name="notification_btn_play">Play</string>
    <string name="notification_btn_share">Share</string>
    <string name="notification_btn_delete">Delete</string>
    <string name="notification_btn_extra">Extra</string>
    <string name="notification_channel_name_captured">Captured</string>
    <string name="notification_channel_name_processing">Processing</string>
    <string name="notification_channel_name_receiving">Receiving file</string>
    <string name="notification_channel_name_wifi_share">@string/bottom_bar_wifi_share</string>
    <string name="notification_channel_name_overlay">Overlay</string>
    <string name="permission_title">Kapture uses these permissions</string>
    <string name="permission_required">Required permissions</string>
    <string name="permission_mic_title">Microphone</string>
    <string name="permission_mic_description">Used to capture the microphone and internal audio.</string>
    <string name="permission_notification_title">Notification</string>
    <string name="permission_notification_description">Used to start the capture service, provide control when app is in background, notify when captures are done and inform when other features are running.</string>
    <string name="permission_camera_title">Camera</string>
    <string name="permission_camera_description">Used to display the front/back camera while recording.</string>
    <string name="permission_storage_title">Storage</string>
    <string name="permission_storage_description">Used to create and manage the captures and related files.</string>
    <string name="permission_storage_popup">Go to your phone settings and grant the ALL FILES permission.</string>
    <string name="permission_security_title">Write secure settings</string>
    <string name="permission_security_description">Used to start/stop the accessibility service.</string>
    <string name="permission_security_popup">You have three options:\n\n1 - Start the service manually and can keep it running (consumes more battery, but allows to start capturing without being redirect to the accessibility screen);\n\n2 - Start and stop the service manually every time (you will be redirected to the accessibility screen if you try to start capturing and the service is off);\n\n3 - Allow the app to start and stop the service automatically by running the command: \n\n\"adb shell pm grant dev.dect.kapture android.permission.WRITE_SECURE_SETTINGS\".\n\nStarting on Android 14, some devices display a popup informing that the accessibility service is a restricted settings and it is unavailable or that it must be manually enabled when you try to manually enable the accessibility service. In case you are using the ADB command this message will not even show up, the app will just not start a capture. In this case you will need to enable it manually.</string>
    <string name="permission_button_continue">Continue</string>
    <string name="permission_button_close">Close app</string>
    <string name="permission_button_settings">Settings</string>
    <string name="permission_button_continue_to_app">Continue to app</string>
    <string name="permission_button_open_accessibility">Open accessibility</string>
    <string name="permission_missing_popup">Permission missing!</string>
    <string name="permission_required_popup">Grant all required permission to use the app. Once granted restart the app.</string>
    <string name="toast_error_viewer_external">No external viewer found!</string>
    <string name="toast_error_file_not_found">File not found!</string>
    <string name="toast_error_no_extras_found">No extras found!</string>
    <string name="toast_error_no_screenshots_found">No screenshots found!</string>
    <string name="toast_error_no_kaptures_found">No kaptures found!</string>
    <string name="toast_error_no_profiles_found">No profiles found!</string>
    <string name="toast_error_generic">Something went wrong!</string>
    <string name="toast_error_merging_1">Could not add internal audio to kapture!</string>
    <string name="toast_error_merging_2">Could not add internal audio to kapture! Two files created!</string>
    <string name="toast_error_open_url">Could not open url!</string>
    <string name="toast_error_launch_homescreen">Could not go to homescreen!</string>
    <string name="toast_error_launch_app">Could not launch app!</string>
    <string name="toast_error_check_update">Could not check if new versions are available. Do it manually!</string>
    <string name="toast_error_download">Could not download the file. Do it manually!</string>
    <string name="toast_error_no_wifi">Connect to a WiFi first!</string>
    <string name="toast_error_profile_name_empty">Profile name cannot be empty!</string>
    <string name="toast_error_profile_name_long">Profile name max number of characters is:</string>
    <string name="toast_error_select_one_app">At least one app is required!</string>
    <string name="toast_error_select_app_max">Max of %d apps!</string>
    <string name="toast_error_version_fetch">Could not fetch new versions!</string>
    <string name="toast_error_version_cached">Could not get cached versions!</string>
    <string name="toast_error_invalid_ip_connecting">Invalid IP and port!</string>
    <string name="toast_error_invalid_ip_paring">Invalid paring IP and port!</string>
    <string name="toast_error_invalid_code_paring">Invalid paring code!</string>
    <string name="toast_error_invalid_version">Invalid version selected!</string>
    <string name="toast_error_installer_error_update">Could not check for updates!</string>
    <string name="toast_error_folder_already_exists">Folder already exists!</string>
    <string name="toast_info_enable_accessibility_manually">Could not open the accessibility screen. Do it manually!</string>
    <string name="toast_info_accessibility_manually">Start the accessibility service first!</string>
    <string name="toast_info_while_recording">Cannot change settings while recording!</string>
    <string name="toast_info_refreshing">Refreshing</string>
    <string name="toast_success_generic">Done!</string>
    <string name="toast_success_active_profile">Active profile:</string>
    <string name="file_name">capture</string>
    <string name="file_name_extra_audio_audio">audio</string>
    <string name="file_name_extra_audio_internal">internal audio</string>
    <string name="file_name_extra_audio_mic">microphone audio</string>
    <string name="file_name_extra_video_no_audio">no audio</string>
    <string name="file_name_extra_video_only_mic">only microphone audio</string>
    <string name="file_name_extra_video_only_internal">only internal audio</string>
    <string name="file_name_screenshot">screenshot</string>
    <string name="popup_title_extra">Extra</string>
    <string name="popup_title_screenshot">Screenshot</string>
    <string name="popup_extra_audio_audio">Audio</string>
    <string name="popup_extra_audio_internal">Audio: internal</string>
    <string name="popup_extra_audio_mic">Audio: microphone</string>
    <string name="popup_extra_video_no_audio">Video: no audio</string>
    <string name="popup_extra_video_only_mic">Video: only microphone audio</string>
    <string name="popup_extra_video_only_internal">Video: only internal audio</string>
    <string name="popup_delete_text_1">Do you want to delete the file:</string>
    <string name="popup_delete_text_2">Do you want to delete the selected file(s)?</string>
    <string name="popup_delete_text_3">Do you want to delete the extra files from the selected file(s)?</string>
    <string name="popup_delete_text_4">Do you want to delete the screenshots files from the selected file(s)?</string>
    <string name="popup_delete_text_5">Do you want to profile:</string>
    <string name="popup_remove">Do you want to remove the selected file(s) from the app? No file will be deleted from the device.</string>
    <string name="popup_title_sort_by">Sort by</string>
    <string name="popup_sort_by_time">Date of capturing</string>
    <string name="popup_sort_by_duration">Duration</string>
    <string name="popup_sort_by_size">Size</string>
    <string name="popup_sort_by_name">Name</string>
    <string name="popup_title_order">Order</string>
    <string name="popup_order_asc">Ascending</string>
    <string name="popup_order_desc">Descending</string>
    <string name="menu_capture_refresh">Refresh</string>
    <string name="menu_capture_select_all">Select all</string>
    <string name="menu_capture_sort">Sort</string>
    <string name="menu_capture_wifi_share">WiFi share</string>
    <string name="menu_settings_open_accessibility">Open accessibility</string>
    <string name="menu_settings_show_command">Show command</string>
    <string name="menu_about">About</string>
    <string name="menu_settings_reset_app_settings">Reset app settings</string>
    <string name="menu_settings_reset_profile_settings">Reset active profile settings</string>
    <string name="bottom_bar_more_rename">Rename</string>
    <string name="bottom_bar_more_remove">Remove</string>
    <string name="bottom_bar_more_show_extra">Show extras</string>
    <string name="bottom_bar_more_delete_extra">Delete extras</string>
    <string name="bottom_bar_more_open_with">Open with</string>
    <string name="tooltip_play_file">Play</string>
    <string name="tooltip_share_file">@string/bottom_bar_share</string>
    <string name="tooltip_delete_file">@string/bottom_bar_delete</string>
    <string name="btn_install">Install on watch</string>
</resources>