<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group0">
        <item
            android:id="@+id/menuRefresh"
            android:title="@string/menu_capture_refresh" />

        <item
            android:id="@+id/menuSelectAll"
            android:title="@string/menu_capture_select_all" />

        <item
            android:id="@+id/menuSort"
            android:title="@string/menu_capture_sort" />

        <item
            android:id="@+id/wifiShare"
            android:title="@string/menu_capture_wifi_share" />
    </group>

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menuOpenAccessibility"
            android:title="@string/menu_settings_open_accessibility" />
        <item
            android:id="@+id/menuShowCommand"
            android:title="@string/menu_settings_show_command" />

        <item
            android:id="@+id/menuAbout"
            android:title="@string/menu_about" />
    </group>
</menu>