<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group0">
        <item
            android:id="@+id/menuAppResetSettings"
            android:title="@string/menu_settings_reset_app_settings" />

        <item
            android:id="@+id/menuProfileResetSettings"
            android:title="@string/menu_settings_reset_profile_settings" />

        <item
            android:id="@+id/menuInstallWatch"
            android:title="@string/btn_install" />
    </group>

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menuOpenAccessibility"
            android:title="@string/menu_settings_open_accessibility" />

        <item
            android:id="@+id/menuShowCommand"
            android:title="@string/menu_settings_show_command" />

        <item
            android:id="@+id/menuAbout"
            android:title="@string/menu_about" />
    </group>
</menu>