<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/picker_item_padding_top_bottom"
    android:paddingBottom="@dimen/picker_item_padding_top_bottom"
    android:paddingStart="@dimen/picker_item_padding_sides"
    android:paddingRight="@dimen/picker_item_padding_sides"
    android:id="@+id/extraContainer">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/extra_size"
        android:layout_height="@dimen/extra_size"
        android:background="@drawable/icon_kapture_extra_play"
        android:foreground="@drawable/btn_effect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tooltipText="@string/tooltip_play_file"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShare"
        android:layout_width="@dimen/extra_size"
        android:layout_height="@dimen/extra_size"
        android:background="@drawable/icon_kapture_extra_share"
        android:foreground="@drawable/btn_effect"
        android:layout_marginStart="@dimen/extra_space_icon_sides"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tooltipText="@string/tooltip_share_file"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/extra_size"
        android:layout_height="@dimen/extra_size"
        android:background="@drawable/icon_kapture_extra_delete"
        android:foreground="@drawable/btn_effect"
        android:layout_marginStart="@dimen/extra_space_icon_sides"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnShare"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tooltipText="@string/tooltip_delete_file"/>

    <TextView
        android:id="@+id/extraName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="@dimen/extra_text"
        android:textColor="@color/extra_text"
        android:layout_marginStart="@dimen/extra_text_margin_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>